# AI-Powered-Cooking-Assistant

./: .env  .env.example  .gitignore  ADMIN_PANEL_GUIDE.md  API_DOCUMENTATION.md  CHAT_SETUP.md  FRONTEND_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ANALYSIS.md  INSTALL_CHAT.sh  NEW_FEATURES_GUIDE.md  README.md  alembic.ini  app.db  datasets.py  main.py  pyproject.toml  requirements.txt  seed_admin.py  test_admin_setup.py  test_new_features.py  transform_data.py
app/: database.py  deps.py  exceptions.py  main.py  middleware.py
app/core/: config.py  security.py
app/models/: __init__.py  messages.py  recipe.py  recipe_collection.py  role.py  shopping_list.py  user.py  user_cooking_session.py  user_feedback.py  user_saved_recipe.py
app/routers/: admin.py  auth.py  chat.py  collections.py  cooking_sessions.py  feedbacks.py  recipes.py  recommendations.py  saved_recipes.py  shopping_lists.py  user_preferences.py  users.py
app/schemas/: admin.py  auth.py  chat.py  collection.py  cooking_session.py  feedback.py  recipe.py  saved_recipe.py  shopping_list.py  user.py  user_preference.py
app/services/: auth_service.py  chat_service.py  collection_service.py  cooking_session_service.py  feedback_service.py  recipe_service.py  recommendation_service.py  saved_recipe_service.py  storage_service.py  (+4 more)
docs/: API_OVERVIEW.md  COOKING_SESSIONS_API.md  FEEDBACK_API.md  RECIPE_DISPLAY_GUIDE.md  RECOMMENDATIONS_API.md  RECOMMENDATION_GUIDE.md  SAVED_RECIPES_API.md  USER_PREFERENCES_API.md  USER_PROFILE_API.md
experiments/: recipe_recommendation.ipynb
migration/: env.py
(+9 files in other folders)
