[project]
name = "ai-powered-cooking-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.8",
    "notebook>=7.3.2",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.1",
    "python-jose>=3.5.0",
    "ruff>=0.9.6",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.34.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain>=1.0.3",
    "storage3>=0.8.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27.0",
]
